# oop_19210_sinitsyn_D

./: .gitignore
lab0_WordCounter/: CMakeLists.txt  lineReader.cpp  lineReader.h  main.cpp  reportService.cpp  reportService.h  tokenService.cpp  tokenService.h  wordStateService.cpp  wordStateService.h
lab1_Trits/: CMakeLists.txt  class_Trit.cpp  class_Trit.h  class_Trit_Set.cpp  class_Trit_Set.h  main.cpp  tests.cpp
lab2/: Workers.h
lab2_FileExecutor/: CMakeLists.txt  Fabric.h  Parser.cpp  Parser.h  Workers.cpp  Workers.h  main.cpp
lab3_Warships/: CMakeLists.txt  GameView.cpp  GameView.h  Handler.cpp  Handler.h  Player.cpp  Player.h  cell.cpp  cell.h  interface.h  main.cpp  ship.cpp  ship.h
lab4/: CMakeLists.txt  PrintTuple.h  csvParser.cpp  csvParser.h  main.cpp
